--- a/login/package.json
+++ b/login/package.json
@@ -16,9 +16,9 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
+    "http-status-codes": "^2.1.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.11.7",
-    "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
