--- a/login/package.json
+++ b/login/package.json
@@ -16,10 +16,12 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.8.0",
     "http-status-codes": "^2.1.4",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.7",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
