--- a/login/.vscode/launch.json
+++ b/login/.vscode/launch.json
@@ -1,17 +1,22 @@
 {
-  // IntelliSense を使用して利用可能な属性を学べます。
-  // 既存の属性の説明をホバーして表示します。
-  // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
+  "version": "0.1.0",
+  // 起動中のChromeと連携してデバッグ
   "configurations": [
     {
-      "type": "node",
-      "request": "launch",
-      "name": "プログラムの起動",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/bin/www"
+      // デバッグ設定の名称
+      "name": "Attach",
+      // デバッグ種別を指定（chrome/node/monoなど）
+      "type": "chrome",
+      // lanunchまたはattachを指定
+      "request": "attach",
+      // マッピングするローカルファイルが配置されているディレクトリを指定
+      "webRoot": "${workspaceRoot}/",
+      // リモートデバッギングポートのポート番号を指定（デフォルト値の9222を指定）
+      "port": 9222,
+      // ソースマップの有効・無効の指定（true/false）
+      "sourceMaps": true,
+      // コンソールにログを出力するかの指定（true/false）
+      "trace": true
     }
   ]
 }
