--- a/login/package.json
+++ b/login/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
@@ -22,6 +24,10 @@
     "mongoose": "^5.11.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "prettier": "^2.2.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-node": "^11.1.0"
   }
 }
